--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "United States"
-  employer         : "Red Brick University"
+  employer         : "Johns Hopkins University"
   uri              : # URL
   email            : "syao31@jh.edu" 
 
