--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Shengtai Yao"
   pronouns         : # example: "she/her"  
-  bio              : #"Short biography for the left-hand sidebar"
+  bio              : " " #"Short biography for the left-hand sidebar"
   location         : "United States"
   employer         : "Johns Hopkins University"
   uri              : # URL
