--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,11 +9,11 @@
 
 main:
 
-  - title: "Research"
-    url: /research/  
+  # - title: "Research"
+  #   url: /research/  
 
     
-  - title: "Publications"
+  - title: "Research"
     url: /publications/
 
   # - title: "Talks"
