--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "United States"
   employer         : "Johns Hopkins University"
   uri              : # URL
-  email            : "syao31@jh.edu" 
+  email            : #"syao31@jh.edu" 
 
   # Academic websites
   academia         : # URL
