--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,11 +9,9 @@
 
 main:
 
-   - title: "Home"
-     url: /about/  
-
-
-    
+   # - title: "Home"
+   #   url: /about/  
+     
   - title: "Research"
     url: /publications/
 
