--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://www.linkedin.com/in/shengtai-yao-763393324/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
