--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,14 +27,9 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
-  # - title: "Blog Posts"
-  #   url: /year-archive/
-    
-  # - title: "CV"
-  #   url: /cv/
-    
-  # - title: "CV"
-  #   url: /cv-json/
+  - title: "Blog"
+    url: /year-archive/
+
     
   # - title: "Guide"
   #   url: /markdown/
