--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,8 +27,8 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
-  - title: "Blog"
-    url: /blog/
+  # - title: "Blog"
+  #   url: /blog/
 
     
   # - title: "Guide"
