--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Home"
     url: /about/  
      
-  # - title: "Research"
-  #   url: /publications/
+  - title: "Research"
+    url: /research/
 
   # - title: "More"
   #   url: /more/
