--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,18 +17,9 @@ main:
 
   # - title: "More"
   #   url: /more/
-
-  # - title: "Talks"
-  #   url: /talks/    
-
-  # - title: "Teaching"
-  #   url: /teaching/    
-    
-  # - title: "Portfolio"
-  #   url: /portfolio/
         
-  # - title: "Blog"
-  #   url: /blog/
+  - title: "Blog"
+    url: /blog/
 
     
   # - title: "Guide"
