--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   - title: "Research"
     url: /research/
 
-  # - title: "More"
-  #   url: /more/
+  - title: "More"
+    url: /more/
         
   # - title: "Blog"
   #   url: /blog/
