--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,9 @@ main:
      
   - title: "Research"
     url: /research/
-
+    
+  - title: "Curriculum Vitae"
+    url: /files/CV/CV_Oct_31.pdf
   - title: "More"
     url: /more/
         
