--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: /research/
     
   - title: "Curriculum Vitae"
-    url: /files/CV/CV_Nov_27.pdf
+    url: /files/CV/CV_Dec_1.pdf
     
   - title: "More"
     url: /more/
