--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "Yaoshengtai/Yaoshengtai.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile_2.jpeg"
+  avatar           : "profile.jpg"
   name             : "Shengtai Yao"
   pronouns         : # example: "she/her"  
   bio              : " " #"Short biography for the left-hand sidebar"
